--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -47,7 +47,7 @@ height:90px;
 width:200px;
 
   right:15vw;
-  top:-20px;
+  top:-100vh -20px;
 
 /*change to button making it less buttony*/
 justify-content: center;
@@ -122,11 +122,13 @@ color:white;
 .page2X0Y1 {
 /*its going to be important that with different screen ratios that background angle still matches the words*/
 
+/*https://cssgradient.io/  scroll to bottom*/
+/*this would help with scaling https://www.creativebloq.com/css3/take-advantage-css-background-size-property-9113027*/
 
 /*how i make the background work will probably change when i animate and want the two to match*/
 
   /*may have to make some divs in funny shapes to get effect i want*/
-  /*or several backgrounds using background size*/
+  /*or several backgrounds using background size- probably works better with background image*/
   /*different screen will have different ratios so do i keep vh vw same and alter gradients
   ot just have gradient going corner to corner - think later*/
   position: relative;
@@ -202,13 +204,13 @@ background:
 /*pink yellow slice*/
 /*
 linear-gradient(to bottom right, white, yellow 45%, transparent 45%,plum 46%, white),*/
-linear-gradient(to bottom right, white, yellow 45%,yellow, transparent,plum,plum 47%, white),
+linear-gradient(165deg, white, yellow 43%,yellow, transparent,plum,plum 45%, white),
 /*middle black layer with transparent cornet*/
 
 linear-gradient(to top right, black 70%, transparent 71%),
 /*bottom layer that will be reveal through gap on both*/
 
-linear-gradient(to bottom right, white, yellow ,plum , white);
+linear-gradient(165deg, white, yellow ,plum , white);
 
 
 /*top and right seem to be altering by pushing of the view pot not the area outside */
@@ -223,7 +225,59 @@ linear-gradient(to bottom right, white, yellow ,plum , white);
 
 
 }
+.pg2Do{
+  position:absolute;
+  height:50vh;
+  width:50vw;
+  /*to match the angle of the gradient will have to find the viewport ratio*/
+  transform:rotate(-15deg);
+  top:0;
+  left:0vw;
+font-family: 'Noto Sans', sans-serif;
 
+font-size: 5rem;
+text-decoration: underline;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  white-space: pre;
+}
+.pCard{
+/*need an equation for gradient and put the bottom centre 1/7th down it*/
+
+width: 3vw;
+height: 12vh;
+position: absolute;
+top:24vh;
+right:35vw;
+
+background-color: white;
+transform: perspective(4px) rotateY(2deg);
+}
+/*maybe just use an arrow box*/
+.pg2CanUse{
+  height:50vh;
+  width:50vw;
+  /*to match the angle of the gradient will have to find the viewport ratio*/
+position:absolute;
+  bottom:5vh;
+  right:25vw;
+
+font-family: 'Noto Sans', sans-serif;
+font-size: 5rem;
+text-decoration: underline;
+
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+    white-space:pre;
+}
+/*must be a better way*/
+
+
+}
 .page1X0Y0 {
   position: relative;
   height: 100vh;
