--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -24,6 +24,17 @@ body {
   margin: 0;
   padding: 0;
   border: 0;
+  /*dont need this but making explicit as can extend element out right of screen not left so need to make from bottom right*/
+/*  width: 200vw;
+  height: 200vh;*/
+  background-color: red;
+  /*red useful for now but later background: radial-gradient( */
+     /*trying to get a glow around it ideally eliptical angle
+     you can negative inset border then transparent out circle
+     or i could put thee background in its own dive
+
+     circle at 50%,*/
+     /*      yellow 50%, yellow, white);   */
 }
 
 /*just for testing*/
@@ -34,7 +45,8 @@ body {
   height: 90px;
   width: 200px;
   right: 15vw;
-  top: -100vh -20px;
+  /*  top: -100vh -20px;*/
+  top: -20px;
   /*change to button making it less buttony*/
   justify-content: center;
   align-content: center;
@@ -68,7 +80,7 @@ body {
 .tab2>Img {
   max-height: 50px;
   max-width: 50px;
-  padding: 0px;
+  padding: 0;
   position: relative;
   margin: 10px 10px 30px;
 }
@@ -101,15 +113,33 @@ body {
   position: relative;
   height: 100vh;
   width: 100vw;
+  left: 100vw;
   /*need to blend edges*/
   background:
     /*top level*/
     /*pink yellow slice*/
+    /*should percents be vh vw*/
     linear-gradient(165deg, white, yellow 43%, yellow, transparent, plum, plum 45%, white),
     /*middle black layer with transparent cornet*/
     linear-gradient(to top right, black 70%, transparent 71%),
     /*bottom layer that will be reveal through gap on both*/
     linear-gradient(165deg, white, yellow, plum, white);
+  /*to make it line up better with card and image tried to put it in vw but doing so
+causes it to behave undesireably with heigh change */
+  /*
+        linear-gradient(165deg, white, yellow 33vw, yellow, transparent, plum, plum 35vw, white),
+              linear-gradient(to top right, black 70vw, transparent 71vw),
+              linear-gradient(165deg, white, yellow, plum, white);*/
+  /*default top left so maybe card needs to be relative to top left*/
+  background-position: center;
+}
+
+.myMarblePg2Start {
+  /*dont know how should use the 165deg and the to top right type starting corner to make sure moves right*/
+  position: absolute;
+  top: 24vh;
+  left: 67vw;
+  z-index: 100;
 }
 
 .pg2Text {
@@ -118,7 +148,6 @@ body {
   width: 50vw;
   /*to match the angle of the gradient will have to find the viewport ratio*/
   transform: rotate(-15deg);
-
   font-family: 'Noto Sans', sans-serif;
   font-size: 5rem;
   text-align: center;
@@ -129,6 +158,7 @@ body {
   an arrow
   white-space: pre;*/
 }
+
 /*need a proper arrow <------ */
 /*need position off top so always in right place compared to text*/
 /*tried percent and pix etc, i think issue is the text behaviour*/
@@ -137,33 +167,35 @@ this means that arrow moves with shrink but text doesnt so need to be in identic
 but with something pushing the arrow down while still central e.g. padding, being in a div
 with top from it
 */
-.pg2Text.higher{
+.pg2Text.higher {
   top: 0;
   left: 0vw;
 }
+
 .pg2Text.lower {
-
   /*to match the angle of the gradient will have to find the viewport ratio*/
-
   bottom: 5vh;
   right: 25vw;
-
-
 }
 
-.arrow{
-  position:absolute;
-
+.arrow {
+  position: absolute;
   /*matching font size to try and get in underline position
   top:15rem;top:18vh;  height: 15rem;width: 90rem;*max-width: 60px;
   height: inherit;width: 100%;top:36.5%;*/
   /*match padding to text size*/
-padding-top: 5rem;
+  padding-top: 5rem;
+  /*
 height: 250px;
 width: 1250px;
+*/
+  /*this squishes nice but needs a min width height setting*/
+  height: 20vh;
+  width: 50vw;
 }
-.arrow.right{
-   transform: scaleX(-1);
+
+.arrow.right {
+  transform: scaleX(-1);
 }
 
 /*
@@ -188,6 +220,10 @@ or a border over the top of both which is the pattern with transparency it has t
 */
 .case2position {
   /*a few marbles width*/
+  /*it is not sticking to right
+if going to be on other screen making it fixed and then just toggle it sliding off and on screens
+with page changes
+  */
   width: 120px;
   height: 70vh;
   position: absolute;
@@ -204,10 +240,11 @@ or a border over the top of both which is the pattern with transparency it has t
   height: inherit;
   position: absolute;
   border-top: 5px solid rgba(103, 128, 100, 0.7);
-  border-right: 0px solid black;
+
   border-bottom: 40px solid black;
   border-left: 40px solid orange;
-  border-right: 0;
+  border-right: 0 solid black;
+
   /*Now need it circle or even better semi circle*/
 }
 
@@ -216,8 +253,8 @@ or a border over the top of both which is the pattern with transparency it has t
   position: absolute;
   bottom: -40px;
   left: -36px;
-  z-index: 80;/*-1;*/
-
+  z-index: 80;
+  /*-1;*/
   /*will this change to inherit*/
   width: inherit;
   height: inherit;
@@ -235,34 +272,29 @@ or a border over the top of both which is the pattern with transparency it has t
   position: absolute;
   bottom: -40px;
   left: -40px;
-  z-index: 80;/*-1;*/
+  z-index: 80;
+  /*-1;*/
   /*if this is set to inherit the pattern moves as the object is stretched
   so width needs to match the maximum_size in the js*/
-
   width: 800px;
   height: inherit;
-  border-top: 0px;
-  border-right: 0px;
+  border-top: 0;
+  border-right: 0;
   border-bottom: 40px solid;
   border-left: 40px solid;
   border-image: repeating-radial-gradient(transparent, olive 5px, brown 5px, olive 5px) 30;
   /*the grain looks nicer when the width is 220px so maybe alter the setting for the pattern
     try to recreate it by altering the numbers for the gradient*/
-    /*if i use rgb colours and put transparency into the colours of the grain I could make the black not be as clearly drawn over*/
+  /*if i use rgb colours and put transparency into the colours of the grain I could make the black not be as clearly drawn over*/
   /*  border-image: repeating-radial-gradient(transparent, olive 10px, brown 10px, olive 10px) 30;*/
 }
 
-.case2Inside {
-  filter: blur(8px);/*8*/
-  /*
-  backdrop-filter:blur(1000px);
-  isnt supported on chrome and most work around have found are based of using transparency in the background and pseudo layers which wont work for me as i want to be able to slide over elements
-
-  */
-  /*i havent looked at box shadow much that might of worked too or using filter-drop shadow*/
+/*rather than classes could just apply to first last child*/
+.glassEffect {
   height: inherit;
   content: "";
-  /*for glass a little blur*/
+  filter: blur(8px);
+  /*8*/
   background: repeating-linear-gradient(-35deg, rgba(129, 207, 224, 0.4), rgba(255, 255, 255, 0.6) 15%, rgba(254, 241, 96, 0.3) 20%) content-box;
   box-shadow: 0 0 100px rgba(0, 0, 0, 0.1), inset 0 0 50px rgba(0, 0, 0, 0.8);
   /*the blur is nice with the black edge (especially with the box shadow on it too)*/
@@ -273,8 +305,7 @@ or a border over the top of both which is the pattern with transparency it has t
 
 .handle {
   position: absolute;
-
-  top:40%;
+  top: 40%;
   left: -40px;
   width: 120px;
   height: 15%;
@@ -289,7 +320,7 @@ or a border over the top of both which is the pattern with transparency it has t
 .handle::before {
   border: 20px solid brown;
   border-image-source: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7NEYbD7_RG24-GQAwnWakNo22wnJMQi9Ra9i0obx6kSGLxUJ7);
-  border-right: 0px;
+  border-right: 0;
 }
 
 .handle::before,
@@ -299,7 +330,7 @@ or a border over the top of both which is the pattern with transparency it has t
   height: 100%;
   width: 50%;
   box-sizing: border-box;
-  border-image-source: url(border-image-source: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7NEYbD7_RG24-GQAwnWakNo22wnJMQi9Ra9i0obx6kSGLxUJ7);
+  border-image-source: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS7NEYbD7_RG24-GQAwnWakNo22wnJMQi9Ra9i0obx6kSGLxUJ7);
   /*number|%|fill|initial|inherit;*/
   border-image-slice: 30%;
   /*number|%|auto|initial|inherit;*/
@@ -316,61 +347,142 @@ or a border over the top of both which is the pattern with transparency it has t
 }
 
 .myflex-container {
+  /*would be nice if balls spin a bit with size change*/
+  /*the balls on left appear on right and vice versa with size change*/
+  /*make a code pen and ask for help and show the issue*/
+  /*if could wrap reverse and plain wrap alternatively between rows?*/
   padding: 0;
   margin: 0;
   list-style: none;
-
   flex-wrap: wrap-reverse;
   display: flex;
-  width:inherit;
+  width: inherit;
   /*height:inherit; if set height it will spread pictures evenly needs to respond
   to them and make itself tall enough maybe maximum height and overflow hidden
   would help when lots of marbles*/
-    /*justify-content:flex-end;*/
-    position:absolute;
-    bottom:40px;
-    padding:0px 0px 10px 15px;
-    /* max-height: height:inherit; not supported in ie "custom properties"*/
+  /*justify-content:flex-end;*/
+  position: absolute;
+  bottom: 0px;
+  padding: 0px 0px 10px 15px;
+  /* max-height: height:inherit; not supported in ie "custom properties"*/
   /* doesnt work max-height:100;
     overflow:hidden;*/
-/*max width works not height
+  /*max width works not height
     max-width:100%;
     max-height:10%;*/
-  }
+}
 
 /*del when have images*/
 .myflex-item {
   width: 100px;
   height: 100px;
-
-  outline:solid black 2px;
-  outline-offset:-2px;
-  border-radius:100px;
+  outline: solid black 2px;
+  outline-offset: -2px;
+  border-radius: 100px;
   background: deepskyblue;
   padding: 0;
   margin: 0;
-
 }
 
-
+.pg2CardLocation {
+  position: absolute;
+  /*try aligning in same way as background so responds the same*/
+  /*align both to width as gets to low as shorten window
+do i need to calculate position using pythagorous
+the line is a percentage of the hypotenuse of full dimensions or screens
+tried a few things havet managed it at this point having a seperate
+container doesnt seem useful
+could try altering background behaviour it moves at moment in a way that isnt a normal shrink
+look into background centre and then move relative to that
+card seemed to follow when centered but then when used margin to push from centre to loaction wanted
+it did not shrink as desired have not yet tried making the box centered and floating the image from it
+or using a second div to push into the space
+or make part of background
+or have the line not a background but a floating image with alpha giving a bit a of parralax feel on shrink
+or a large square top right and its bottom left it the card?
+or just plan out each elements
+ think about all the elements involved maybe background in vh vw,
+ position in it to everything centerd then moved relative to center
+*/
+  /*
+top:21%;
+right:35%;
+*/
+  top: 50vh;
+  left: 50vw;
+  transform: rotate(-15deg);
+  /*setting div size becuase its size may affect location and current adapts to size of card*/
+  width: 100px;
+  height: 200px;
+}
 
 .pCard {
   /*need an equation for gradient and put the bottom centre 1/7th down it*/
-  width: 3vw;
+  /*seems better by moving it relative to centre but the black line will always shrink in height with width so card need to as well by some amount*/
+  transform: rotate(+15deg);
+  position: relative;
+  left: 20vw;
+  bottom: 23vh;
+  width: 100px;
   height: 12vh;
-  position: absolute;
-  top: 24vh;
-  right: 35vw;
+  /*
+  top:21%;
+  right:35%;
+  */
   background-color: white;
   transform: perspective(4px) rotateY(2deg);
 }
 
-
+.containerToReceiveMyMarblePG2 {
+  position: relative;
+  left: 21vw;
+  bottom: 28vh;
+  /*
+width: 100px;
+height: 100px;
+  background-color: pink;
+*/
+}
 
 .page1X0Y0 {
   position: relative;
   height: 100vh;
   width: 100vw;
+  left: 100vw;
+}
+
+.page4X0Y0 {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  left: 100vw;
+  /*top level*/
+  /*pink yellow slice*/
+  /*should percents be vh vw*/
+  /*because the size of the two pink sections is different the colours dont blend perfectly*/
+  /*this is currently fine as colurs will probably change */
+  background: linear-gradient(-165deg, white, plum 43%, plum, transparent, yellow, yellow 45%, white), black;
+  background-position: center;
+}
+
+.page3 {
+  position: absolute;
+  /*for centering its shape*/
+  display: flex;
+  flex-direction: column;
+  top: 50vh;
+  height: 100vh;
+  width: 100vw;
+  /*screen extend right but not left*/
+  margin: 0;
+  padding: 0;
+  background: radial-gradient(
+    /*trying to get a glow around it ideally eliptical angle
+     you can negative inset border then transparent out circle
+     or i could put thee background in its own dive
+
+     circle at 50%,*/
+    yellow, yellow, white);
 }
 
 .noScroll {
@@ -381,8 +493,9 @@ or a border over the top of both which is the pattern with transparency it has t
 .Scroll {
   overflow-x: hidden;
 }
+
 /*make a and mymarble the same*/
-.myMarble {
+.myMarbleImg {
   border-radius: 40%;
   /*background delete*/
   background-color: blue;
@@ -390,13 +503,13 @@ or a border over the top of both which is the pattern with transparency it has t
   height: 100px;
   position: absolute;
 }
-.aMarble{
+
+.aMarble {
   border-radius: 40%;
   /*background delete*/
   background-color: white;
   width: 100px;
   height: 100px;
-
 }
 
 .invisible {
@@ -506,14 +619,41 @@ or a border over the top of both which is the pattern with transparency it has t
 }
 
 /*make it so can toggle between rolling and end rolling with pseudo ::*/
-.end-rolling {}
-
-.rolling {
-  animation:
-    spin 2s linear infinite forwards;
+/*pg2*/
+.pg2MarbleAnimX {
+  animation: xAxisPg2 1s linear 0s normal 1 forwards running;
 }
 
-@keyframes spin {
+
+
+.pg2MarbleAnimY {
+  animation: yAxisPg2 1s linear 0s normal 1 forwards running;
+}
+
+
+
+/*dont expect this to work because ive put it in a container I could take it out of
+it container, i could not put it in in first place and just give it the values*/
+@keyframes xAxisPg2 {}
+
+/*not expecting this to work as really need to calculate where the line hits the left side considering
+the screen may be a different ratio
+*/
+@keyframes yAxisPg2 {}
+
+.end-rolling {}
+
+.rollingClockwise {
+  animation:
+    spinClockwise 2s linear infinite forwards;
+}
+
+.rollingAntiClockwise {
+  animation:
+    spinAntiClockwise 2s linear infinite forwards;
+}
+
+@keyframes spinClockwise {
 
   /* trick will be starting from position it is in  */
   from {
@@ -522,6 +662,18 @@ or a border over the top of both which is the pattern with transparency it has t
 
   to {
     transform: rotate(720deg);
+  }
+}
+
+@keyframes spinAntiClockwise {
+
+  /* trick will be starting from position it is in  */
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(-720deg);
   }
 }
 
@@ -599,6 +751,8 @@ roll ball same time top left and bounce across the words and down
 then fade in corner stuff and have drink appear under the drink icon and the icon disappear
 same time bounce the ball up and move view up slightly and reveal tab as it get to last 10% of screen
 do both halfs of this action in 1s each
+
+is this a div issue?
     */
 .drinkButton:active {}
 
@@ -652,9 +806,174 @@ jquery
   border: 0;
 }
 
-/*tried corners etc but not managed to change the corner colour within the code of the corner
-can do it with a gradient or a border
+/* I've tried to use pseudo and otherwise found issues with vh vw and pixel dont know why
+is it 10px + short it is a proportion from somewhere
+it is working! it is that the flick flicks to soon
+   */
+/*shape and shaoe flick not working now but did in the code pen*/
+/*
+.shape{
+    background:radial-gradient(ellipse at 50%, purple 50%, plum);
+ /*border colour a black with alpha*/
+/*
+  border-color:rgba(0, 0, 0, 0.75);
+  border-style: solid;
+  /*make bottom 10px again later just trying to se the gap*/
+/*
+  border-width: 10px 0px 10px 2px;
+ border-bottom-color:red;
+  height: 60vh;
+  width: 60vw;
+  border-radius: 60% 0% 60% 0%;
+  display: flex;
+
+  padding:0px 0px 0px 0px;
+  margin:0px 0px 0px 40px;
+
+}
 */
+/*i want to extend the border left so trying to use a pseudo element
+to make a lip to catch the ball
+*/
+/*
+.shapeflick{
+  position:absolute;
+ /*if the flick reveals colour underneath when moving about could bake the ".shape" bottom border 0 and add margin 10px to top or padding or make the bottom colour transparent*/
+/*border colour a black with alpha*/
+/*margin ballencing out space lost from border*/
+/*by having margin and padding can move into padded area*/
+/*the curve will not be exact doing this so make it fat*/
+/*could also shift it down a bit and put own background on*/
+/*could also make it the bottom element*/
+/*
+  padding:0px 0px 0px 40px;
+  margin:0px 0px 0px 0px;
+
+  border-color:rgba(0, 0, 0, 1);
+  border-style: solid;
+  /*make 10 px later just need to see where it falls*/
+/*
+border-width: 10px 0px 10px 2px;
+  border-color:transparent transparent black transparent;
+
+  height: 60vh;
+  width: 60vw;
+  border-radius: 60% 10% 60% 7%;
+  display: flex;
+
+}
+*/
+
+.bestCardsArea {
+
+/*at large sizes of px or vh vw get border bottom difference in hieght between two objects
+the two objects are exactly the same i think
+*/
+  width: 80vw;
+ 	height: 80vh;
+  /*
+   position:absolute;
+*/
+  z-index: 86;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+}
+
+
+.shape2 {
+
+
+
+width: inherit;
+height: inherit;
+position:absolute;
+/*z-index:1;*/
+  /*padding is to get bootstrap in place*/
+padding:10vh 15vw;
+margin:0px 0px 0px 0px;
+
+ background:radial-gradient(ellipse at 50%, purple 50%, plum);
+ /*border colour a black with alpha*/
+
+  border-color:rgba(0, 0, 0, 0.75);
+  border-style: solid;
+  /*make bottom 10px again later just trying to se the gap*/
+
+  border-bottom-color:black;
+  border-width: 10px 0px 10px 2px;
+  border-radius: 60% 0% 60% 0%;
+
+  /* nice how it cuts over edge of card but lose the flick too so would need to be on a second container, only hides does not make the contents shrink to fit
+   overflow-y:hidden;*/
+
+
+}
+
+.shape2:after {
+/*why is this 10px lower down*/
+  bottom:-10px;
+
+  /*this is off the 80px*/
+  /*this left amount needs to be proportional to the width or
+the radial on the border needs to be so the curve does not start curving before
+it should
+maybe altering the width could acheive this and setting a full curve
+  */
+  /*needs to be minimum marble size calc(-5vw -40px not working)*/
+  left: -5vw;
+
+  z-index: -1;
+  content: "";
+  /*the width needs to put the centre point on the boundary*/
+  /*its straight now so it can be the width it needs to be and left the width it needs to be
+however this will make the curve small
+  */
+  /* width needs to be half  and currently its 70 no doesnt work*/
+  width:20vw;
+	height: inherit;
+  position: absolute;
+  padding:0px 0px 0px 0px;
+  margin:0px 0px 0px 0px;
+
+ /*transparent transparent black transparent*/
+ border-color:transparent transparent black transparent;
+ border-style: solid;
+
+ border-width: 10px 0px 10px 2px;
+ /*only need bottom left*/
+ border-radius: 0% 0% 0% 7%;
+
+}
+.card{
+  /*later will have set objects to go i  n but for now*/
+ /*
+  width:15vw;
+  height:35vh;
+  */
+  /*need something to keep the ratio*/
+  min-width:125px;
+  min-height:150px;
+  background:grey;
+
+
+  /*or use bootstrap center-block*/
+  display: block;
+    margin-right: auto;
+    margin-left: auto;
+
+}
+.magnifier{
+  width:100px;
+  height:100px;
+    background:green;
+
+  /*or use bootstrap center-block*/
+  display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 .corner-background {
   background-color: grey;
   position: fixed;
