page 3 first pass done

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -505,7 +505,7 @@ height: 100px;
 }
 
 .aMarble {
-  border-radius: 40%;
+  border-radius: 50%;
   /*background delete*/
   background-color: white;
   width: 100px;
@@ -872,30 +872,82 @@ border-width: 10px 0px 10px 2px;
 
 .marbleOnShape1{
   position:absolute;
-  right:500px;
-  top:3vh;
-  z-index:3;
+  right:0px;
+  top:-100px;
+    z-index:3;
+
 }
 .marbleOnShape1Y{}
 .marbleOnShape1X{}
 
 .marbleOnShape2{
   position:absolute;
-  right:600px;
-  top:3vh;
+  right:0px;
+  top:-100px;
     z-index:3;
+
 }
-.marbleOnShape2Y{}
 .marbleOnShape2X{}
+.marbleOnShape2Y{}
 
 .marbleOnShape3{
-  position:absolute;
-  right:400px;
-  top:3vh;
-    z-index:3;
+    position:absolute;
+    right:0px;
+    top:-100px;
+      z-index:3;
+
+  }
+  .marbleOnShape3Y{}
+  .marbleOnShape3X{}
+
+
+
+
+
+.containerMagnifier {
+	width: 100px;
+  height:100px;
+	margin:  auto;
+box-sizing: border-box;
+   /*transform-origin:350*3/10 350*6/10;*/
+/*
+  this works for providing a starting angle however it seems to cause the magnifier to exclude some of its circle
+   transform:rotate(230deg);
+  */
 }
-.marbleOnShape3Y{}
-.marbleOnShape3X{}
+
+.dial {
+  /*ive halfed the image size and set its height and width as the width and height. if this were to be dynamic and the image change size with the viewport then i would need to write some code calculating the center for the origin to set transform origin and it may be necessary to change the jquery code as well to catch these variables*/
+	width: 100px;
+	height: 100px;
+
+
+  /*x y*/
+  /*if open magnifier on paint and find the exact pixel center of magnifier works perfectly*/
+     transform-origin:40px 70px;
+  /*put in percent to be more flexible if change size of the img but keep the ratio but for now i want easy access to number of pixels for using in the jquery
+  transform-origin:44% 29%;*/
+
+
+
+ /*transform-origin:350*3/10 350*6/10;*/
+position:absolute;
+}
+.theMagnifier{
+  /*center image*/
+/*its 1022 833 so half size 511 417*/
+  position:absolute;
+  margin:auto;
+ display:flex;
+width:inherit;
+  height:inherit;
+/*if change image rotation need to change the mouse and rotation center points*/
+
+  transform:  rotate(220deg);
+
+  /*could code to center the image on the middle of the magnifying glass however */
+}
+
 
 
 
@@ -1048,7 +1100,7 @@ when refactor set the h's to the same font but different font sizes and have thi
   position:absolute;
   right:0;
   top:0;
-  
+
   /*use margin or */
   margin:5vh 5vw;
 }
