--- a/frontEnd/CSS/styles.css
+++ b/frontEnd/CSS/styles.css
@@ -46,7 +46,7 @@ a :hover { color:
 yellow;
 }
 
-.grayTillViewPortMove{
+.grayUntilJQueryLoads{
   position:absolute;
   z-index:100;
   background: #262626;
@@ -57,7 +57,7 @@ yellow;
 }
 
 /*just for testing*/
-.tab2 {
+.tabPage1To2 {
   position: absolute;
   display: inline-block;
   font-size: 4rem;
@@ -80,7 +80,7 @@ yellow;
   text-align: inherit;
 }
 
-.tab2::before {
+.tabPage1To2::before {
   content: '';
   /* To generate the box */
   position: absolute;
@@ -96,7 +96,7 @@ yellow;
   text-overflow: ellipsis;
 }
 
-.tab2>Img {
+.tabPage1To2>Img {
   max-height: 50px;
   max-width: 50px;
   padding: 0;
@@ -104,7 +104,7 @@ yellow;
   margin: 10px 10px 30px;
 }
 
-.tab2>i {
+.tabPage1To2>i {
   position: relative;
   margin: 10px 10px 10px 30px;
   color: white;
@@ -153,7 +153,7 @@ causes it to behave undesireably with heigh change */
   background-position: center;
 }
 
-.myMarblePg2Start {
+.philProfileMarblePg2Start {
   /*dont know how should use the 165deg and the to top right type starting corner to make sure moves right*/
   position: absolute;
   top: 24vh;
@@ -452,7 +452,7 @@ right:35%;
   transform: perspective(4px) rotateY(2deg);
 }
 
-.containerToReceiveMyMarblePG2 {
+.containerToReceivephilProfileMarblePG2 {
   position: relative;
   left: 21vw;
   bottom: 28vh;
@@ -463,7 +463,7 @@ height: 100px;
 */
 }
 
-.page1X0Y0 {
+.bottomRightPage1 {
   position: relative;
   height: 100vh;
   width: 100vw;
@@ -502,8 +502,8 @@ height: 100px;
   overflow-x: hidden;
 }
 
-/*make a and mymarble the same*/
-.myMarbleImg {
+/*make a and philProfileMarble the same*/
+.philProfileMarbleImg {
   border-radius: 50%;
   /*background delete*/
   background-color: blue;
@@ -530,22 +530,22 @@ height: 100px;
   transition: opacity 2s linear;
 }
 
-.tab2.invisible {
+.tabPage1To2.invisible {
   opacity: 0;
   transition: opacity 1s linear;
 }
 
-.tab2.visible {
+.tabPage1To2.visible {
   opacity: 1;
   transition: opacity 1s linear;
 }
 
-.myMarbleY {
+.philProfileMarbleY {
   position: relative;
   top: 100px;
 }
 
-.myMarbleX {
+.philProfileMarbleX {
   position: relative;
   left: -110px;
 }
@@ -553,7 +553,7 @@ height: 100px;
 /*name duration function delay direction iteration fill state*/
 /*page1stage1*/
 /*maybe a set distance and put in repititions*/
-.myMarbleYAnim {
+.philProfileMarbleYAnim {
   /*drop on text*/
   animation: yAxisStep1 1s cubic-bezier(1, .02, .91, .48) 1s normal 1 forwards running,
     /*waits till roll across text then falls*/
@@ -562,7 +562,7 @@ height: 100px;
     yAxisStep3 0.5s cubic-bezier(.03, .86, .69, .78) 3.5s normal 1 forwards running;
 }
 
-.myMarbleXAnim {
+.philProfileMarbleXAnim {
   /*traj to text*/
   animation: xAxisStep1 1s linear 1s normal 1 forwards running,
     /*across text*/
